[package]
name = "gym-pocket-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
mongodb = "3.0.1"
tokio = { version = "1", features = ["full"] }
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
